--- a/public/html/index.html
+++ b/public/html/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Lite-Brite</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/main.css">
 </head>
-<body>
+  <body>
 
-<script src="js/app.js" type="text/javascript"></script>
-
-</script>
-</body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js" type="text/javascript"></script>
+  <script src="js/app.js" type="text/javascript"></script>
+  </body>
 </html>
