--- a/public/html/index.html
+++ b/public/html/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="/css/main.css">
 </head>
   <body>
-
+    <div class="container">
+      <table id="canvas"></table>
+    </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js" type="text/javascript"></script>
   <script src="js/app.js" type="text/javascript"></script>
   </body>
