--- a/public/html/index.html
+++ b/public/html/index.html
@@ -11,13 +11,13 @@
       <div class="col-md-4">
         <div class="form-group">
           <label for="umber-of-rows">Please enter the number of rows:</label>
-          <input type="text" id="number-of-rows" class="form-control">
+          <input type="text" id="number-of-rows" class="form-control" placeholder="default: 15">
         </div>
       </div>
       <div class="col-md-4">
         <div class="form-group">
           <label for="number-of-cols">Please enter the number of columns:</label>
-          <input type="text" id="number-of-cols" class="form-control">
+          <input type="text" id="number-of-cols" class="form-control" placeholder="default: 15">
         </div>
       </div>
       <div class="col-md-4">
