revised the page layout and update-grid button logic

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,6 +8,7 @@
 </head>
   <body>
     <div class="row">
+      <h1>Lite Brite Settings:</h1>
       <div class="col-md-4">
         <div class="form-group">
           <label for="umber-of-rows">Please enter the number of rows:</label>
@@ -20,10 +21,13 @@
           <input type="text" id="number-of-cols" class="form-control" placeholder="default: 15">
         </div>
       </div>
+    </div>
+    <div class="row">
       <div class="col-md-4">
-        <button type="button" id="update-grid-button" class="btn btn-success">Update Grid Size</button>
+        <button type="button" id="update-grid-button" class="btn btn-success">Update/Clear Grid</button>
       </div>
     </div>
+    <hr>
     <div class="container">
       <table id="canvas"></table>
     </div>
