--- a/public/html/index.html
+++ b/public/html/index.html
@@ -26,10 +26,10 @@
       <div class="col-md-4 col-sm-4 col-xs-4">
         <button type="button" id="update-grid-button" class="btn btn-success">Update/Clear Grid</button>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-4 col-xs-4">
         <span>Select a paint color:
           <select id="paint-color">
-            <option value="red">red</option>
+            <option value="red" selected="true">red</option>
             <option value="black">black</option>
             <option value="blue">blue</option>
             <option value="cyan">cyan</option>
@@ -37,6 +37,10 @@
             <option value="magenta">magenta</option>
             <option value="yellow">yellow</option>
           </select>
+        </span><br><br>
+        <span>Enter a new hex color to paint with:
+          <input type="text" id="new-color" placeholder="Example: '#ffff'">
+          <button type="button" name="addColor" id="add-color-button">Add Color</button>
         </span>
       </div>
     </div>
