got the add hex color feature and scrolling working

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -29,7 +29,7 @@
       <div class="col-md-4 col-sm-4 col-xs-4">
         <span>Select a paint color:
           <select id="paint-color">
-            <option value="red" selected="true">red</option>
+            <option value="red" selected="selected">red</option>
             <option value="black">black</option>
             <option value="blue">blue</option>
             <option value="cyan">cyan</option>
