--- a/public/html/index.html
+++ b/public/html/index.html
@@ -7,48 +7,67 @@
   <link rel="stylesheet" href="/css/main.css">
 </head>
   <body>
-    <div class="row">
-      <h1>Lite Brite Settings:</h1>
-      <div class="col-md-4 col-sm-4 col-xs-4">
-        <div class="form-group">
-          <label for="umber-of-rows">Please enter the number of rows:</label>
-          <input type="text" id="number-of-rows" class="form-control" placeholder="default: 15">
+    <header>
+      <div id="title" class="row">
+        <h1 class="col-md-offset-2 col-sm-offset-2 col-xs-offset-2">Lite Brite Simulator</h1>
+      </div>
+    </header>
+    <main class="main-app">
+      <div id="instructions" class="row">
+        <div class="col-md-6 col-sm-6 col-xs-6">
+          <h3>Basic Instructions:</h3>
+          <p><b>Basic coloring:</b> Click in any block of the Lite-Brite canvas to apply/unapply the current paint.<br>
+          <b>Other colors:</b> You can cycle through the color list with your up/down keys.<br>
+          <b>Add colors:</b> Enter new colors to the list using <a href="http://www.w3schools.com/colors/colors_picker.asp">hex codes</a>.<br>
+          <b>Canvas size:</b> Input number of canvas rows and columns, and click the "Update" button.<br>
+          <a href="https://en.wikipedia.org/wiki/Lite-Brite" target="_blank">Learn about the original Lite Brite toys</a></p>
         </div>
       </div>
-      <div class="col-md-4 col-sm-4 col-xs-4">
-        <div class="form-group">
-          <label for="number-of-cols">Please enter the number of columns:</label>
-          <input type="text" id="number-of-cols" class="form-control" placeholder="default: 15">
+      <hr>
+      <h3>Settings:</h3>
+      <div class="row">
+        <div class="col-md-4 col-sm-4 col-xs-4">
+          <div class="form-group">
+            <label for="number-of-rows">Specify number rows, then press Update:</label>
+            <input type="text" id="number-of-rows" class="form-control" placeholder="default: 15">
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4">
+          <div class="form-group">
+            <label for="number-of-cols">Specify number of columns, then press Update:</label>
+            <input type="text" id="number-of-cols" class="form-control" placeholder="default: 15">
+          </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4 col-sm-4 col-xs-4">
-        <button type="button" id="update-grid-button" class="btn btn-success">Update/Clear Grid</button>
+      <div class="row">
+        <div class="col-md-4 col-sm-4 col-xs-4">
+          <button type="button" id="update-grid-button" class="btn btn-success">Update/clear the Lite-Brite canvas</button>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4">
+          <span>Select a paint color:
+            <select id="paint-color">
+              <option value="red" selected="selected">red</option>
+              <option value="black">black</option>
+              <option value="blue">blue</option>
+              <option value="cyan">cyan</option>
+              <option value="green">green</option>
+              <option value="magenta">magenta</option>
+              <option value="yellow">yellow</option>
+            </select>
+          </span><br><br>
+          <span>Enter a new hex color to paint with:
+            <input type="text" id="new-color" placeholder="Example: '#ffff'">
+            <button type="button" name="addColor" id="add-color-button">Add Color</button>
+          </span>
+        </div>
       </div>
-      <div class="col-md-4 col-sm-4 col-xs-4">
-        <span>Select a paint color:
-          <select id="paint-color">
-            <option value="red" selected="selected">red</option>
-            <option value="black">black</option>
-            <option value="blue">blue</option>
-            <option value="cyan">cyan</option>
-            <option value="green">green</option>
-            <option value="magenta">magenta</option>
-            <option value="yellow">yellow</option>
-          </select>
-        </span><br><br>
-        <span>Enter a new hex color to paint with:
-          <input type="text" id="new-color" placeholder="Example: '#ffff'">
-          <button type="button" name="addColor" id="add-color-button">Add Color</button>
-        </span>
+      <hr>
+      <h3>The Canvas:</h3>
+      <div class="container">
+        <table id="canvas"></table>
       </div>
-    </div>
-    <hr>
-    <div class="container">
-      <table id="canvas"></table>
-    </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js" type="text/javascript"></script>
-  <script src="js/app.js" type="text/javascript"></script>
+    </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js" type="text/javascript"></script>
+    <script src="js/app.js" type="text/javascript"></script>
   </body>
 </html>
