made the interface for the app much simpler and cleaner

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,70 +4,86 @@
   <meta charset="UTF-8">
   <title>Lite-Brite</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/main.css">
+  <style type="text/css"></style>
 </head>
   <body>
-    <header>
-      <div id="title" class="row">
-        <h1 class="col-md-offset-2 col-sm-offset-2 col-xs-offset-2">Lite Brite Simulator</h1>
+    <header id="title">
+      <div class="container-fluid">
+        <div class="row">
+          <div id="app-title" class="col-md-4 col-sm-4 col-xs-4">
+            <h2>Lite Brite Simulator</h2>
+          </div>
+          <div id="color-menu" class="col-md-3 col-sm-3 col-xs-3">
+            <div class="dropdown">
+              <button id="color-button" class="red" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Color-Selector
+                <span class="caret"></span>
+              </button>
+              <ul id="color-list" class="dropdown-menu" aria-labelledby="color-patches">
+                <li class="li-color"><div class="red color-patch" title="red"></div>red</li>
+                <li class="li-color"><div class="blue color-patch" title="blue"></div>blue</li>
+                <li class="li-color"><div class="cyan color-patch" title="cyan"></div>cyan</li>
+                <li class="li-color"><div class="green color-patch" title="green"></div>green</li>
+                <li class="li-color"><div class="magenta color-patch" title="magenta"></div>magenta</li>
+                <li class="li-color"><div class="yellow color-patch" title="yellow"></div>yellow</li>
+                <li id="add-color"><span id="add-color-link">Click to add a hex color</span></li>
+              </ul>
+            </div>
+          </div>
+          <div id="instructions-menu" class="col-md-4 col-sm-4 col-xs-4">
+            <div class="dropdown">
+              <button id="instructions-label" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Instructions
+                <span class="caret"></span>
+              </button>
+              <ul id="instructions-list" class="dropdown-menu" aria-labelledby="instructions-label">
+                <li>
+                  <strong>Basic coloring:</strong> Click in any block of the Lite-Brite canvas to apply/unapply the current paint.
+                </li>
+                <li>
+                  <strong>Other colors:</strong> You can cycle through the color list with your up/down keys.
+                </li>
+                <li>
+                  <span>
+                    <strong>Add colors:</strong> Enter new colors to the list using <a href="http://www.w3schools.com/colors/colors_picker.asp" target="_blank">hex codes</a>.
+                  </span>
+                </li>
+                <li>
+                  <strong>Canvas size:</strong> Input number of canvas rows and columns, and click the "Update" button.
+                </li>
+                <li>
+                  <span>
+                    <a href="https://en.wikipedia.org/wiki/Lite-Brite" target="_blank">Learn about the original Lite Brite toys</a>
+                  </span>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
-    <main class="main-app">
-      <div id="instructions" class="row">
-        <div class="col-md-6 col-sm-6 col-xs-6">
-          <h3>Basic Instructions:</h3>
-          <p><b>Basic coloring:</b> Click in any block of the Lite-Brite canvas to apply/unapply the current paint.<br>
-          <b>Other colors:</b> You can cycle through the color list with your up/down keys.<br>
-          <b>Add colors:</b> Enter new colors to the list using <a href="http://www.w3schools.com/colors/colors_picker.asp">hex codes</a>.<br>
-          <b>Canvas size:</b> Input number of canvas rows and columns, and click the "Update" button.<br>
-          <a href="https://en.wikipedia.org/wiki/Lite-Brite" target="_blank">Learn about the original Lite Brite toys</a></p>
-        </div>
-      </div>
-      <hr>
-      <h3>Settings:</h3>
-      <div class="row">
-        <div class="col-md-4 col-sm-4 col-xs-4">
-          <div class="form-group">
-            <label for="number-of-rows">Specify number rows, then press Update:</label>
-            <input type="text" id="number-of-rows" class="form-control" placeholder="default: 15">
+    <main id="main-app">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-7 col-sm-7 col-xs-7">
+            <h4>Your Lite-Brite Canvas: <small>(note the instructions and color picker above)</small>:</h4>
           </div>
-        </div>
-        <div class="col-md-4 col-sm-4 col-xs-4">
-          <div class="form-group">
-            <label for="number-of-cols">Specify number of columns, then press Update:</label>
-            <input type="text" id="number-of-cols" class="form-control" placeholder="default: 15">
+          <div class="col-md-2 col-sm-2 col-xs-2">
+            <button id="canvas-size" type="button" class="btn btn-primary">Canvas Size</button>
+          </div>
+          <div class="col-md-2 col-sm-2 col-xs-2">
+            <button id="clear-canvas" type="button" class="btn btn-success">Clear Canvas</button>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4 col-sm-4 col-xs-4">
-          <button type="button" id="update-grid-button" class="btn btn-success">Update/clear the Lite-Brite canvas</button>
-        </div>
-        <div class="col-md-4 col-sm-4 col-xs-4">
-          <span>Select a paint color:
-            <select id="paint-color">
-              <option value="red" selected="selected">red</option>
-              <option value="black">black</option>
-              <option value="blue">blue</option>
-              <option value="cyan">cyan</option>
-              <option value="green">green</option>
-              <option value="magenta">magenta</option>
-              <option value="yellow">yellow</option>
-            </select>
-          </span><br><br>
-          <span>Enter a new hex color to paint with:
-            <input type="text" id="new-color" placeholder="Example: '#ffff'">
-            <button type="button" name="addColor" id="add-color-button">Add Color</button>
-          </span>
-        </div>
-      </div>
-      <hr>
-      <h3>The Canvas:</h3>
       <div class="container">
         <table id="canvas"></table>
       </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js" type="text/javascript"></script>
     <script src="js/app.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
