--- a/public/html/index.html
+++ b/public/html/index.html
@@ -12,10 +12,12 @@
     <header id="title">
       <div class="container-fluid">
         <div class="row">
-          <div id="app-title" class="col-md-4 col-sm-4 col-xs-4">
+          <div id="app-title" class="col-md-12 col-sm-12 col-xs-12">
             <h2>Lite Brite Simulator</h2>
           </div>
-          <div id="color-menu" class="col-md-3 col-sm-3 col-xs-3">
+        </div>
+        <div class="row">
+          <div id="color-menu" class="col-md-2 col-sm-2 col-xs-2">
             <div class="dropdown">
               <button id="color-button" class="red" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Color-Selector
@@ -27,12 +29,19 @@
                 <li class="li-color"><div class="cyan color-patch" title="cyan"></div>cyan</li>
                 <li class="li-color"><div class="green color-patch" title="green"></div>green</li>
                 <li class="li-color"><div class="magenta color-patch" title="magenta"></div>magenta</li>
+                <li class="li-color"><div class="white color-patch" title="white"></div>white</li>
                 <li class="li-color"><div class="yellow color-patch" title="yellow"></div>yellow</li>
                 <li id="add-color"><span id="add-color-link">Click to add a hex color</span></li>
               </ul>
             </div>
           </div>
-          <div id="instructions-menu" class="col-md-4 col-sm-4 col-xs-4">
+          <div class="canvas col-md-1 col-sm-2 col-xs-2 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+            <button id="canvas-size" type="button" class="btn btn-primary btn-sm">Canvas Size</button>
+          </div>
+          <div class="canvas col-md-1 col-sm-2 col-xs-2 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+            <button id="clear-canvas" type="button" class="btn btn-success btn-sm">Clear Canvas</button>
+          </div>
+          <div id="instructions-menu" class="col-md-4 col-sm-4 col-xs-4 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
             <div class="dropdown">
               <button id="instructions-label" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Instructions
@@ -65,22 +74,8 @@
       </div>
     </header>
     <main id="main-app">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-7 col-sm-7 col-xs-7">
-            <h4>Your Lite-Brite Canvas: <small>(note the instructions and color picker above)</small>:</h4>
-          </div>
-          <div class="col-md-2 col-sm-2 col-xs-2">
-            <button id="canvas-size" type="button" class="btn btn-primary">Canvas Size</button>
-          </div>
-          <div class="col-md-2 col-sm-2 col-xs-2">
-            <button id="clear-canvas" type="button" class="btn btn-success">Clear Canvas</button>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <table id="canvas"></table>
-      </div>
+      <h4>Your Lite-Brite Canvas:</h4>
+      <table id="canvas"></table>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js" type="text/javascript"></script>
     <script src="js/app.js" type="text/javascript"></script>
